--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "version": "0.1.4",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "0.2.0",
+  "name": "import-scheduler",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "exports": {
+    "import": "./dist/esm/index.js",
+    "require": "./dist/cjs/index.js"
+  },
+  "types": "dist/types/index.d.ts",
   "files": [
     "dist",
     "src"
@@ -13,18 +19,12 @@
   "keywords": [
     "pridepack"
   ],
-  "name": "import-scheduler",
-  "module": "dist/import-scheduler.esm.js",
-  "exports": {
-    "require": "./dist/index.js",
-    "import": "./dist/import-scheduler.esm.js"
-  },
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.34",
     "eslint": "^7.22.0",
     "eslint-config-lxsmnsyc": "^0.1.20",
-    "pridepack": "^0.7.2",
+    "pridepack": "^0.8.0",
     "tslib": "^2.1.0",
     "typescript": "^4.2.3"
   },
