--- a/package.json
+++ b/package.json
@@ -1,13 +1,41 @@
 {
   "version": "0.2.1",
   "name": "import-scheduler",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "exports": {
-    "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.js"
-  },
   "types": "dist/types/index.d.ts",
+  "main": "dist/cjs/production/index.js",
+  "module": "dist/esm/production/index.js",
+  "exports": {
+    ".": {
+      "development": {
+        "require": "./dist/cjs/development/index.js",
+        "import": "./dist/esm/development/index.js"
+      },
+      "require": "./dist/cjs/production/index.js",
+      "import": "./dist/esm/production/index.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./dev": {
+      "production": {
+        "require": "./dist/cjs/production/index.js",
+        "import": "./dist/esm/production/index.js"
+      },
+      "require": "./dist/cjs/development/index.js",
+      "import": "./dist/esm/development/index.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./esm": {
+      "development": "./dist/esm/development/index.js",
+      "production": "./dist/esm/production/index.js",
+      "default": "./dist/esm/production/index.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./cjs": {
+      "development": "./dist/cjs/development/index.js",
+      "production": "./dist/cjs/production/index.js",
+      "default": "./dist/cjs/production/index.js",
+      "types": "./dist/types/index.d.ts"
+    }
+  },
   "files": [
     "dist",
     "src"
@@ -20,17 +48,16 @@
     "pridepack"
   ],
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.2",
+    "@types/node": "^16.11.1",
     "eslint": "^7.25.0",
-    "eslint-config-lxsmnsyc": "^0.2.1",
-    "pridepack": "^0.9.3",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "eslint-config-lxsmnsyc": "^0.3.0",
+    "pridepack": "^1.0.3",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {},
   "scripts": {
-    "prepublish": "pridepack clean && pridepack build",
+    "prepublishOnly": "pridepack clean && pridepack build",
     "build": "pridepack build",
     "type-check": "pridepack check",
     "lint": "pridepack lint",
